[package]
name = "food"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
dotenvy = "0.15.7"
encoding_rs = "0.8.34"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.118"
tl = "0.7.8"
tokio = { version = "1.38.0", features = ["full"] }
